infrastructure/kubernetes/manifests/all/commons/traefik-forward-auth/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: traefik-forward-auth-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://traefik-forward-auth
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
spec:
  rules:
    - host: auth.muwazana.com
      http:
        paths:
          - backend:
              serviceName: traefik-forward-auth
              servicePort: 80
